--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li><a class="nav-link" href="#Introduction">Introduction</a></li>
             <li><a class="nav-link" href="#What_should_you_already_know">What you should already know</a></li>
 
-            <li><a class="nav-link" href="#JavaScript_and_java">JavaScript and Java</a></li>
+            <li><a class="nav-link" href="#JavaScript_and_Java">JavaScript and Java</a></li>
             <li><a class="nav-link" href="#Hello_world">Hello world</a></li>
             <li><a class="nav-link" href="#Variables">Variables</a></li>
             <li>
@@ -76,7 +76,7 @@
 
         <!-- Section for "What should you already know" -->
 
-        <section class="main-section" id="What_you_should_already_know">
+        <section class="main-section" id="What_should_you_already_know">
             <header>What you should already know</header>
             <article>
                 <p>This guide assumes you have the following basic background:</p>
@@ -131,7 +131,7 @@
             <!-- Section for "Hello World" -->
 
         </section>
-        <section class="main-section" id="Hello_World">
+        <section class="main-section" id="Hello_world">
             <header>Hello World</header>
             <article>
                 To get started with writing JavaScript, open the Scratchpad and write your first "Hello World"
