--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
         <!-- Section for "Javascript and Java" -->
 
-        <section class="main-section" id="Javascript_and_Java">
+        <section class="main-section" id="JavaScript_and_Java">
             <header>Javascript and Java</header>
             <article>
                 <p>
