--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <!-- Section for "Javascript and Java" -->
 
         <section class="main-section" id="JavaScript_and_Java">
-            <header>Javascript and Java</header>
+            <header>JavaScript and Java</header>
             <article>
                 <p>
                     JavaScript and Java are similar in some ways but fundamentally different
