--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
+<!DOCTYPE html>
+
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="CSS/style3.css">
+    <link rel="stylesheet" href="style3.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
