--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <section id="welcome-section" class="welcome-section">
         <h1>I am Janne</h1>
-        <p>an aspiring front-end Web Developer</p>
+        <p>an aspiring Web Developer</p>
     </section>
 
     <!-- Projects section -->
@@ -55,7 +55,7 @@
                 </p>
             </a>
             <a
-            href="https://codepen.io/freeCodeCamp/full/qRZeGZ"
+            href="#"
             target="_blank"
             class="project project-tile"
           >
